# TextSummarizer

./: .gitignore  README.md  SETUP_GUIDE.md  config.py  demo.py  env_template.txt  example_usage.py  install.py  install_uv.py  main.py  pdf_extractor.py  pyproject.toml  requirements.txt  run_demo.bat  run_demo.sh  summary_cli.py  summary_tool.py  text_summarizer.py  utils.py  voice_cli.py  voice_example.py  voice_generator.py  voice_tool.py
